De-duplicate common code in device model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ PRIVATE
     base/platform/win/wrl/wrl_module_h.h
     base/platform/base_platform_custom_app_icon.h
     base/platform/base_platform_global_shortcuts.h
+    base/platform/base_platform_info.cpp
     base/platform/base_platform_info.h
     base/platform/base_platform_last_input.h
     base/platform/base_platform_layout_switch.h
